# EZH-3.0

./: README.md  package-lock.json  package.json
cloudStorage/01f4abdfa6445c33731db079901626a44fa4a3d014e4f0041f7b8018f9813a15/TEMP_TXT/: Anas Raza - Ebadurrehman Siddiqui.txt  Ebad-ur-Rahman Resume updated++ - Ebadurrehman Siddiqui.txt  Ebrahim Rakhman Gul Resume - Ebrahim Rakhman Gul -RG.txt  IbrahimAhmedKhan_CV - Ibrahim Ahmed.txt  (+13 more)
src/: App.css  App.js  CVpage.jsx  Comparision.jsx  Dashboard.css  Dashboard_v2.jsx  Dataset.jsx  Datasetform.css  Datasetform.jsx  DynamicTable.jsx  Header.js  Home.css  Home.js  Landing_v2.jsx  Listing.jsx  Login.jsx  Login_v2.jsx  Nabe.jsx  PassReset.jsx  PassReset_v2.jsx  PaymentForm.jsx  PricingPlan.css  PricingPlan.js  PricingPlan.jsx  Reg.js  Register.jsx  Registration_v2.jsx  Settings.jsx  Sidebar.css  Startingpage.css  Startingpage.jsx  Twofa_v2.jsx  data.jsx  dataset.css  index.css  listing.css  sidebar.jsx  style.css  v2.css  vcode_v2.jsx
src-tauri/: Cargo.toml  ali.txt  tauri.conf.json
src-tauri/src/: CloudStorage_EZH.rs  GitHub_EZH.rs  LogReg.rs  NER_EZH.rs  PDF_EZH.rs  Single_Column(Abd).rs  Single_Column.rs  TBA (do not touch).rs  Templates.rs  TxtCondense_EZH.rs  main.rs  zip7_base64.rs
src-tauri/src/pain/: Cargo.toml  LogReg.rs  Subscriptions.rs  TBA (do not touch).rs  main.rs  zip7_base64.rs
src/CSS Bank/: LogReg.css
src/M_Ali/: DatasetInfo.js  Datasetform.css  Datasetform.js  Datasetupload.js  Forgottenpassword.js  FormLib.js  Home.js  Login.js  Singup.js  Styles.js  ViewingDataset.css  ViewingDataset.js
(+25 files in other folders)
